--- a/CHANGELOG
+++ b/CHANGELOG
@@ -300,9 +300,10 @@
 
 
 2009-12-02: 1.0.0
-- Initial release!
 - Full details: http://www.naturalearthdata.com/blog/miscellaneous/let-the-downloads-begin/
+
+- NEW:      Initial release!
 
 
 2009-10-00: 0.0.0
-- Announced and demo'd at NACIS mapping conference in Sacramento, CA
+- NOTE:     Announced and demo'd at NACIS mapping conference in Sacramento, CA
