--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,257 @@
+2012-10-12: 2.0.0
+- Full details: 
+
+GENERAL
+- NATURAL_EARTH_UPDATE_2.0.0	**UPDATED**All instances of Name1 have been changed to name, NAME to name, Name2 to name_alt. Vertexes were added to many themes to allow them to project into conics smoothly. All field (column) names are now lowercase and generally in the order of: scalerank, featurecla, name, name_alt, natscale, labelrank, *. Scale ranks in filenames now scale rank (singular). All files now include VERSION and README files. Full changes detailed by file below.
+	
+PACKAGES	
+- NATURAL_EARTH_QUICK_START	**UPDATED**All instances of Name1 have been changed to name, NAME to name, Name2 to name_alt. Vertexes were added to many themes to allow them to project into conics smoothly. All field (column) names are now lowercase and generally in the order of: scalerank, featurecla, name, name_alt, natscale, labelrank, *. Scale ranks in filenames now scale rank (singular). All files now include VERSION and README files. Full changes detailed by file below.
+	
+NE_10M_BUILDING_BLOCKS	 
+- NE_10M_LAND_OCEAN_LABEL_POINTS	**NEW** used for building the 10m physical geometry. 
+- NE_10M_MINOR_ISLAND_LABEL_POINTS	**NEW** used for building the 10m physical geometry. 
+- NE_10M_ADMIN_0_LABEL_POINTS	**NEW** used for building the 10m cultural geometry. 
+- NE_10M_ADMIN_1_LABEL_POINTS.GDB	**NEW** used for building the 10m cultural geometry. 
+- NE_10M_ADMIN_1_LABEL_POINTS_DETAILS.GDB	**NEW** used for building the 10m cultural geometry. 
+- NE_10M_LAND_OCEAN_SEAMS	**NEW** used for building the 10m physical geometry. Includes densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_ADMIN_0_SEAMS	**NEW** used for building the 10m cultural geometry. Includes densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_ADMIN_1_SEAMS	**NEW** used for building the 10m cultural geometry. Includes densified vertex along lines to allow smooth projection into conics.
+	
+NATURAL_EARTH_VECTOR	
+- NATURAL_EARTH_VECTOR.SQLITE	**NEW** All Natural Earth themes packaged in a single SQLite database file.
+	
+HOUSEKEEPING	
+- NE_ADMIN_0_DETAILS	**UPDATED** track admin-0 countries and other levels. Updated for South Sudan, map colors, population figures, removed () from notes, and more. Note: Diffs between sov, adm0, map units, map subunits, and new breakaways are all calculated on the a3 codes now, no longer mix of names and a3 codes. Added and split note_adm0 and note_brk to note which countries are parts of which sovereignties and who's breaking away or disputing. One spurious “County” feature code fixed to “Country” (Finland). Added labelrank on all. Added new mapcolors (7, 8, 9 and old 13). Includes new detail on Carib. Netherlands map unit. Adds more detail to Bhutan disputed areas. Now includes continent codes, and future region code placeholder columns. Fixes over 2.0.0 release candidate 2 problems in Georgia, Chile, and Cyprus for parts that had scaleranks > 6 and were disappearing from countries and up on selection / dissolve. Added name_len to know when to abbreviate labels. 
+- NE_ADMIN_0_FULL_ATTRIBUTES	**NEW** Added as placeholder for extra thematic data by country (eg from World Bank, CIA World Factbook, etc). Has old 1.2 era data for now.
+- NE_ADMIN_1_DETAILS	**NEW** track admin-1 states and provinces. 
+- NE_THEMES_VERSIONS	**UPDATED** what version is each file at? Stats on each. 
+	
+NE_10M_CULTURAL	
+- NE_10M_ADMIN_0_COUNTRIES	**UPDATED** rebuilt geometry so all countries have coincidental boundary line work (no sliver polygons, no small self-intersection loops) and new coastline (Gibraltar is in the right spot, 1000s of other spots world wide). Georgia's map units now follow admin-1. Updated some map unit notes. Uses updated admin-0 details. Fixes: VS55865Z8A, 2MH8QDPMWZ, 89272PRVWP, 86981W1MPA, WUAU1PQN6H 
+- NE_10M_ADMIN_0_MAP_UNITS	**UPDATED** rebuilt geometry so all countries have coincidental boundary line work (no sliver polygons, no small self-intersection loops) and new coastline (Gibraltar is in the right spot, 1000s of other spots world wide). Uses updated admin-0 details, including final ISO code for South Sudan, recombining Gaza Strip and West Bank into Palestine, retiring Maly Vysotsky Island back to Russia as the Finish lease expired. Fixes: VS55865Z8A, 2MH8QDPMWZ, 89272PRVWP, 86981W1MPA, WUAU1PQN6H, 8XV9T88TM6, AWLB5ZJXMN 
+- NE_10M_ADMIN_0_MAP_SUBUNITS	**UPDATED** rebuilt geometry so all countries have coincidental boundary line work (no sliver polygons, no small self-intersection loops) and new coastline (Gibraltar is in the right spot, 1000s of other spots world wide). Georgia's map units now follow admin-1. Updated some map unit notes. Uses updated admin-0 details. Fixes: VS55865Z8A, 2MH8QDPMWZ, 89272PRVWP, 86981W1MPA, WUAU1PQN6H 
+- NE_10M_ADMIN_0_SCALE_RANK	**UPDATED** Name change to removed plural from scale rank. Rebuilt geometry so all admin-0 parts have coincidental boundary linework (no sliver polygons, no small self-intersection loops). Uses updated admin-0 details. Now incorporates disputed areas an some depreciated areas for easier political map assembly. 
+- NE_10M_ADMIN_0_SCALE_RANK_MINOR_ISLANDS	**UPDATED** Name change to removed plural from scale rank. Rebuilt geometry so all admin-0 parts have coincidental boundary linework (no sliver polygons, no small self-intersection loops). Uses updated admin-0 details. Now incorporates disputed areas an some depreciated areas for easier political map assembly. 
+- NE_10M_ADMIN_0_SOVEREIGNTY	**UPDATED** Rebuilt geometry so all sovereignty have coincidental boundary linework (no sliver polygons, no small self-intersection loops). Uses updated admin-0 details. 
+- NE_10M_ADMIN_0_BOUNDARY_LINES_LAND	**UPDATED** Minor updates to alignment of boundary lines, additional coding to allow official US gov't view of same. Better disputed coding, including Kosovo. Densified vertex along lines to allow smooth projection into conics. Moved Omani exclave Madha to correct location. Adds left and right labels and codes. Fixes: N96NSYPAPV, ZQNTN5VGDD. 
+- NE_10M_ADMIN_0_BOUNDARY_LINES_MARITIME_INDICATOR	**UPDATED** minor updates, including marking Alaska / BC boundary as disputed. Moved Hong Kong admin-1 line to admin-0 marine indicator. Includes densified vertex along lines to allow smooth projection into conics. Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes: 4VA9P9UGQE. 
+- NE_10M_ADMIN_0_BOUNDARY_LINES_MAP_UNITS	**UPDATED** Minor updates to alignment of boundary lines, additional coding to allow official US gov't view of same. Better disputed coding. Densified vertex along lines to allow smooth projection into conics. Fixes: N96NSYPAPV 
+- NE_10M_ADMIN_0_BOUNDARY_LINES_DISPUTED_AREAS	**UPDATED** Minor updates to alignment of boundary lines, additional coding to allow official US gov't view of same. Better disputed coding. Densified vertex along lines to allow smooth projection into conics. Adds notes about who's claim the line is in the name column. Fixes: N96NSYPAPV 
+- NE_10M_ADMIN_0_PACIFIC_GROUPINGS	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_ADMIN_0_DISPUTED_AREAS	**UPDATED** See - ne_10m_admin_0_disputed_areas_scale_rank changelog. 
+- NE_10M_ADMIN_0_DISPUTED_AREAS_SCALE_RANK	**UPDATED** Now derived from the admin-0 scale ranks. Specific admin_a3 codes have been added for each. Additional disputed areas have been added, some modified, including adding Taiwan, more detail around Bhutan, and adding labelrank attribute to help know when it's relevant to label on map. Fixes: N96NSYPAPV. 
+- NE_10M_ADMIN_0_ANTARCTICA_CLAIMS	**NEW** Although countries have paused their claims to the southernmost continent,  they haven't suspended them. Thanks, Hans! 
+- NE_10M_ADMIN_0_ANTARCTICA_CLAIM_LIMIT_LINES	**NEW** Although countries have paused their claims to the southernmost continent,  they haven't suspended them. Thanks, Hans! 
+- NE_10M_ADMIN_1_STATES_PROVINCES_SHP	**UPDATED** Multiple, see - ne_10m_admin_1_states_provinces_lakes_geodb.gdb changelog for details. 
+- NE_10M_ADMIN_1_STATES_PROVINCES_LINES_SHP	**UPDATED** Multiple, see - ne_10m_admin_1_states_provinces_geodb.gdb changelog for details. Is now an export of the GeoDB version (some details lost in UTF8-Windows1252 character conversion). Note the _shp postfix is enforced now. 
+- NE_10M_ADMIN_1_STATES_PROVINCES_LINES_GEODB.GDB	**NEW** To allow for left and right labeling along lines using the UTF8 names. 
+- NE_10M_ADMIN_1_STATES_PROVINCES_GEODB.GDB	**UPDATED** rebuilt geometry so all admin-1 have coincidental boundary line work (no sliver polygons, no small self-intersection loops) and new coastline (Gibraltar is in the right spot, 1000s of other spots world wide). Removed duplicate lines in the Philippine. Added new provinces in New Zealand. Moved Hong Kong admin-1 line to admin-0 marine indicator. Fixed Canada boundary between Labrador and Quebec. Fixes Czech admin-1 regions. Uses updated admin-1 details. Name1 have been changed to name, NAME to name, Name2 to name_alt. Added name_len to know when to abbreviate labels. Updates map colors. Fixes 95ZDQXDPHW, G8Y31LEYY8, XZ2G1MU9HJ, 4VA9P9UGQE.  
+- NE_10M_ADMIN_1_STATES_PROVINCES_LAKES_GEODB.GDB	**UPDATED** Multiple, see - ne_10m_admin_1_states_provinces_lakes_geodb.gdb changelog for details. 
+- NE_10M_ADMIN_1_STATES_PROVINCES_LAKES_SHP	**UPDATED** Multiple, see - ne_10m_admin_1_states_provinces_lakes_geodb.gdb changelog for details.
+- NE_- NE_10M_ADMIN_1_STATES_PROVINCES_SCALE_RANK_GEODB.GDB	**UPDATED** Multiple, see - ne_10m_admin_1_states_provinces_lakes_geodb.gdb changelog for details.
+- NE_- NE_10M_ADMIN_1_STATES_PROVINCES_SCALE_RANK_MINOR_ISLANDS_GEODB.GDB	**UPDATED** Multiple, see - ne_10m_admin_1_states_provinces_lakes_geodb.gdb changelog for details. 
+- NE_10M_POPULATED_PLACES	**UPDATED** A couple name corrections (Morelia, Mexico spelling fixed. Mazatlan, Mexico spelling fixed. Clarified confusion around Tabatinga / Leticia on the Colombian / Brazilian border. On the Brazil / Bolivia border, clarified Brasileia / Cobija. Fixed spelling of Shuozhou, China), many population max values, mostly in China, India, Rift Valley, Nigeria, and other countries in east Asia, but some elsewhere. Mades sure cities in Switzerland are coded admin-0 of CH and China are CN. Moved Amundsen Base to 176 so it's in the -12 timezone. Also moved Peter I Island. Vatican City is also moved to be contained by it's admin-0 polygon. Same for San Marino. Added a popRank column with 0 to 14 numerical classes. Fixes: 4SUAZ7BB49, D459XT1Z6Y. 
+- NE_10M_POPULATED_PLACES_LESS_COLUMNS	**UPDATED** Now auto generated from the - ne_10m_populated_places file. See that changelog. 
+- NE_10M_URBAN_AREA	**UPDATED** Removed spurious urban polygons in Nevada and other high reflectance desert areas or ice fields like on Mt. Hood in Oregon. Added detailed scalerank attributes. 
+- NE_10M_LANDSCAN_URBAN_AREAS	**NO CHANGE** 
+- NE_10M_PARKS_AND_PROTECTED_LANDS	**UPDATED**Filename is now parks and protected lands, but content remains exclusively United States only. Several new parks added, see readme. 
+- NE_10M_PARKS_AND_PROTECTED_LANDS_AREA	**UPDATED**Filename is now parks and protected lands, but content remains exclusively United States only. Several new parks added, see readme. Fixed topology errors. Adjusted coastlines to match new coastlines. Adjusted a few scale ranks for zooms 2, 3, 4. 
+- NE_10M_PARKS_AND_PROTECTED_LANDS_SCALE_RANKS	**NEW** source for dissolved park area multi-polygons. 
+- NE_10M_PARKS_AND_PROTECTED_LANDS_LINES	**UPDATED**Filename is now parks and protected lands, but content remains exclusively United States only. Several new parks added, see readme. 
+- NE_10M_PARKS_AND_PROTECTED_LANDS_POINTS	**UPDATED**Filename is now parks and protected lands, but content remains exclusively United States only. Several new parks added including Cesar Chavez National Monument, see readme for full details. Added missing “name” column. Some reranking for scaleranks 7, 8, 9 for parks in urban centers. Added missing unit_codes for Clinton Birthplace NHS and River Raisin NBP. 
+- NE_10M_ROADS	**UPDATED**Now global coverage, includes scaleranks. New Europe roads include route numbers and road types. Added some detail in North America. 
+- NE_10M_ROADS_NORTH_AMERICA_SUPPLEMENT	**UPDATED**Now includes scaleranks. 
+- NE_10M_RAILROADS	**UPDATED**Now global coverage, includes scaleranks. 
+- NE_10M_AIRPORTS	**NEW** Added airports as a selection of Mile High Club (updated). 
+- NE_10M_PORTS	**NEW** Added ports as a selection from High Seas (updated). 
+- NE_10M_TIME_ZONES	**NEW** Generalized time zones, thanks Alex! Includes special dispensation for Antarctica 
+	
+NE_10M_PHYSICAL	
+- NE_10M_RIVERS_LAKE_CENTERLINES	**UPDATED**See - ne_10m_rivers_lake_centerlines_scale_ranks for details. 
+- NE_10M_RIVERS_LAKE_CENTERLINES_SCALE_RANKS	**UPDATED**Updated river names, few new rivers, splits. Added river connector in Sweden between lake near Stockholm and Baltic Sea. Fixes in France and Netherlands. Fixes Mackenzie river at it's confluence with Dawson river. Fixes: SHAWNZQJ3B, 5J47B13PJ7, W9X539LBUT, 35YLBL2W9Z. 
+- NE_10M_RIVERS_LAKE_CENTERLINES_NORTH_AMERICA_SUPPLEMENT	**UPDATED**Updated river names, few new rivers, splits. Fixes: SHAWNZQJ3B, 5J47B13PJ7. 
+- NE_10M_RIVERS_LAKE_CENTERLINES_EUROPE_SUPPLEMENT	**UPDATED**Updated river names, few new rivers, splits. Fixed topology errors. Fixes: SHAWNZQJ3B. 
+- NE_10M_LAKES	**UPDATED**Removed major lake groupings (Great Lakes, Finger Lakes, etc) to geography label areas instead. Title cased the feature class values. Added Swedish lake near Stockholm  (had been extension of Baltic Sea in ocean theme). Fixed topology errors. Fixed a few reservoir and salt lake codes (thanks Craig!). 
+- NE_10M_LAKES_NORTH_AMERICA_SUPPLEMENT	**UPDATED** Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes 4VA9P9UGQE. 
+- NE_10M_LAKES_EUROPE_SUPPLEMENT	**NO CHANGE** 
+- NE_10M_LAKES_HISTORIC	**UPDATED** Name1 have been changed to name, NAME to name, Name2 to name_alt. Updated scale ranks so Aral Sea is 3, lake in Mexico is now 8. Fixes 4VA9P9UGQE.  
+- NE_10M_LAKES_PLUVIAL	**UPDATED**Fixed topology errors. 
+- NE_10M_PLAYAS	**NO CHANGE**
+- NE_10M_GEOGRAPHY_REGIONS_POLYS	**UPDATED**Now includes major lake groupings (Great Lakes, Finger Lakes, etc) moved, from lake theme. Fixed topology errors. Title case feature class values. Removed duplicate Laccadive Islands poly. 
+- NE_10M_GEOGRAPHY_REGIONS_POINTS	**NO CHANGE** 
+- NE_10M_GEOGRAPHY_ELEVATION_POINTS	**NO CHANGE** 
+- NE_10M_GEOGRAPHY_MARI- NE_POLYS	**UPDATED**Updated the scale ranks for better zoom-by-zoom mapping. Fixed topology errors. 
+- NE_10M_LAND	**UPDATED**A dissolved version of the original 1.x file. Incorporates new coastline. Fixes XAWXTN54GT. 
+- NE_10M_LAND_SCALE_RANKS	**NEW** Renamed our original land file to this. Incorporates new coastline. Fixes XAWXTN54GT. 
+- NE_10M_OCEAN	**UPDATED**A dissolved version of the original 1.x file. Fixes XAWXTN54GT. Removed Swedish lake near Stockholm  (had been extension of Baltic Sea in ocean theme) to lakes layer. Incorporates new coastline.  
+- NE_10M_OCEAN_SCALE_RANKS	**NEW** Renamed our original ocean file to this. Incorporates new coastline. Fixes XAWXTN54GT. 
+- NE_10M_COASTLINE	**UPDATED**Better matches modern satellite imagery to zoom 8-ish. The earlier coastline could have been several kilometers off (like in Gibraltar). Several large new islands added. Includes densified vertex along lines to allow smooth projection into conics.
+- NE_10M_MINOR_ISLANDS	**UPDATED**Better matches modern satellite imagery to zoom 8-ish. The earlier coastline could have been several kilometers off. Several hundred small new islands added. 
+- NE_10M_MINOR_ISLANDS_COASTLINE	**UPDATED**Better matches modern satellite imagery to zoom 8-ish. The earlier coastline could have been several kilometers off. Several hundred small new islands added. 
+- NE_10M_REEFS	**NO CHANGE**
+- NE_10M_GLACIATED_AREAS	**UPDATED** donut holes in large glaciers are now punched thru rather than being duplicate polygons. Clipped to new land shape. May miss a few sliver polygons between ice and coastline. Fixed topology errors. Fixes: 1EH6NRTJ6P
+- NE_10M_ANTARCTIC_ICE_SHELVES_POLYS	**UPDATED**Densified vertex along lines to allow smooth projection into conics. Fixed topology errors. Remade columns (fieldnames). 
+- NE_10M_ANTARCTIC_ICE_SHELVES_LINES	**UPDATED**Densified vertex along lines to allow smooth projection into conics.
+- NE_10M_BATHYMETRY_ALL	**UPDATED**Includes new coastline, fixes topology errors. 
+- NE_10M_BATHYMETRY_0	**UPDATED**Better matches modern satellite imagery to zoom 8-ish. The earlier coastline could have been several kilometers off. Several large new islands added. Topology errors repaired 
+- NE_10M_BATHYMETRY_200	**UPDATED** Topology errors repaired 
+- NE_10M_BATHYMETRY_1000	**UPDATED** Topology errors repaired 
+- NE_10M_BATHYMETRY_2000	**UPDATED** Topology errors repaired 
+- NE_10M_BATHYMETRY_3000	**WAITING** Still needs further fixes.
+- NE_10M_BATHYMETRY_4000	**WAITING** Still needs further fixes.
+- NE_10M_BATHYMETRY_5000	**WAITING** Still needs further fixes.
+- NE_10M_BATHYMETRY_6000	**UPDATED** Topology errors repaired 
+- NE_10M_BATHYMETRY_7000	**WAITING** Still needs further fixes.
+- NE_10M_BATHYMETRY_8000	**WAITING** Still needs further fixes.
+- NE_10M_BATHYMETRY_9000	**WAITING** Still needs further fixes.
+- NE_10M_BATHYMETRY_10000	**WAITING** Still needs further fixes.
+- NE_10M_GEOGRAPHIC_LINES	**UPDATED** New Int'l Date Line, thanks Alex! Also densified linework for smoother projection into conics. 
+- NE_10M_GRATICULES_ALL	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_GRATICULES_1	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_GRATICULES_5	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_GRATICULES_10	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_GRATICULES_15	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_GRATICULES_20	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_GRATICULES_30	**UPDATED** Densified vertex along lines to allow smooth projection into conics. 
+- NE_10M_WGS84_BOUNDING_BOX	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+	
+10M RASTERS	
+- HYP_HR_SR_W_DR_OCEAN	**UPDATED** New water areas.
+- HYP_LR_SR_W_DR_OCEAN	**UPDATED** New water areas.
+- HYP_HR_SR_W_DR	**UPDATED** New water areas.
+- HYP_LR_SR_W_DR	**UPDATED** New water areas.
+- HYP_HR_SR_W	**UPDATED** New water areas.
+- HYP_LR_SR_W	**UPDATED** New water areas.
+- HYP_HR_SR	**UPDATED** New water areas.
+- HYP_LR_SR	**UPDATED** New water areas.
+- NE1_LR_LC_SR_W_DR	**UPDATED** New water areas.
+- NE1_LR_LC_SR_W	**UPDATED** New water areas.
+- NE1_LR_LC_SR	**UPDATED** New water areas.
+- NE1_LR_LC	**NO CHANGE**
+- NE1_HR_LC_SR_W_DR	**UPDATED** New water areas.
+- NE1_HR_LC_SR_W	**UPDATED** New water areas.
+- NE1_HR_LC_SR	**NO CHANGE?**
+- NE1_HR_LC	**NO CHANGE**
+- NE2_LR_LC_SR_W_DR	**UPDATED** New water areas.
+- NE2_LR_LC_SR_W	**UPDATED** New water areas.
+- NE2_LR_LC_SR	**NO CHANGE?**
+- NE2_LR_LC	**NO CHANGE**
+- NE2_HR_LC_SR_W_DR	**UPDATED** New water areas.
+- NE2_HR_LC_SR_W	**UPDATED** New water areas.
+- NE2_HR_LC_SR	**UPDATED** New water areas.
+- NE2_HR_LC	**NO CHANGE**
+- NE_10M_OCEAN_BOTTOM_OB_LR	**NO CHANGE**
+- NE_10M_SHADED_RELIEF_SR_HR	**UPDATED** New water areas. 
+- NE_10M_SHADED_RELIEF_SR_LR	**UPDATED** New water areas.
+- GRAY_HR_SR_OB_DR	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_HR_SR_OB	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_HR_SR_W	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_HR_SR	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_LR_SR_OB_DR	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_LR_SR_OB	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_LR_SR_W	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_LR_SR	**NEW** special greyscale relief + hypsometric tints.
+	
+50M CULTURAL	
+- ne_50m_admin_0_countries	**UPDATED** Fixes geometry errors, uses updated admin-0 details, new lake in Sweden is no longer punched out (was part of ocean).
+- ne_50m_admin_0_map_units	**UPDATED** Fixes topology errors, uses updated admin-0 details,  new lake in Sweden is no longer punched out (was part of ocean).
+- ne_50m_admin_0_map_subunits	**UPDATED** Fixes topology errors, uses updated admin-0 details,  new lake in Sweden is no longer punched out (was part of ocean).
+- ne_50m_admin_0_scale_ranks	**UPDATED** Fixes topology errors, uses updated admin-0 details,  new lake in Sweden is no longer punched out (was part of ocean).
+- ne_50m_admin_0_sovereignty	**UPDATED** Fixes topology errors, uses updated admin-0 details,  new lake in Sweden is no longer punched out (was part of ocean).
+- ne_50m_admin_0_tiny_countries	**UPDATED** Updated admin-0 details.
+- ne_50m_admin_0_tiny_countries_scale_rank	**UPDATED** Updated admin-0 details.
+- ne_50m_admin_0_boundary_map_units	**NO CHANGE**
+- ne_50m_admin_0_boundary_lines_land	**UPDATED** A additional coding to allow official US gov't view of same. Better disputed coding, in alignment with 10m file Kosovo, etc). Densified vertex along lines to allow smooth projection into conics. Fixes: N96NSYPAPV.
+- ne_50m_admin_0_boundary_lines_maritime_indicator	**NO CHANGE**
+- ne_50m_admin_0_pacific_groupings	**NO CHANGE**
+- ne_50m_admin_0_breakaway_disputed_areas	**UPDATED** Filename change. Minor updates to alignment of boundary lines, additional coding to allow official US gov't view of same. Better disputed coding. Densified vertex along lines to allow smooth projection into conics. Fixes: N96NSYPAPV.
+- ne_50m_admin_0_boundary_lines_disputed_areas	**UPDATED** Filename change. Minor updates to alignment of boundary lines, additional coding to allow official US gov't view of same. Better disputed coding. Densified vertex along lines to allow smooth projection into conics. Fixes: N96NSYPAPV.
+- ne_50m_admin_1_states_provinces_shp	**UPDATED**Added some new ISO coding, other minor changes. Fixes topology errors. Adds admin-1 for Brazil and Australia. Uses same coding as 10m files. Derived from new scale rank version.
+- ne_50m_admin_1_states_provinces_shp_scale_rank	**NEW** Added a version for data linking ease in future revisions.
+- ne_50m_admin_1_states_provinces_lakes_shp	**NEW** Added new version that punches out large lakes, based on lakes of scalerank = 0.
+- ne_50m_admin_1_states_provinces_lines_shp	**UPDATED** Filename change to remove plural from scale rank. Fixes topology errors. Adds more columns for selection based on 10m version.
+- ne_50m_populated_places	**UPDATED** Now auto generated from the ne_10m_populated_places file. See that changelog.
+- ne_50m_populated_places_simple	**UPDATED** Now auto generated from the ne_10m_populated_places file. See that changelog.
+- ne_50m_urban_area	**UPDATED**Added detailed scale ranks based on new coding of 10m file.
+- ne_50m_airports	**NEW** Now auto generated from the ne_10m_airports file.
+- ne_50m_ports	**NEW** Now auto generated from the ne_10m_ports file.
+	
+50M_PHYSICAL	
+- ne_50m_rivers_lake_centerlines	**UPDATED** Added lake to Baltic connector in Sweden. Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes 4VA9P9UGQE. 
+- ne_50m_rivers_lake_centerlines_scale_ranks	**UPDATED** Added lake to Baltic connector in Sweden. Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes 4VA9P9UGQE. 
+- ne_50m_lakes	**UPDATED** Moved lake in Sweden here instead of ocean. Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes 4VA9P9UGQE. 
+- ne_50m_lakes_historic	**UPDATED** Name1 have been changed to name, NAME to name, Name2 to name_alt. Updated scaleranks. Fixes 4VA9P9UGQE. 
+- ne_50m_playas	**UPDATED** Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes 4VA9P9UGQE. 
+- ne_50m_geography_regions_polys	**UPDATED** Now auto generated from the 10m version. Now includes major lake groupings (Great Lakes, Finger Lakes, etc) moved, from lake theme.
+- ne_50m_geography_regions_points	**UPDATED** Now auto generated from the 10m version.
+- ne_50m_geography_regions_elevation_points	**UPDATED** Now auto generated from the 10m version.
+- ne_50m_geography_marine_polys	**UPDATED** Now auto generated from the 10m version.
+- ne_50m_land	**UPDATED** Name1 have been changed to name, NAME to name, Name2 was removed. Removed lake near Stockholm, Sweden. Fixes 4VA9P9UGQE. 
+- ne_50m_ocean	**UPDATED** Name1 have been changed to name, NAME to name, Name2 was removed. Removed lake near Stockholm, Sweden. Fixes 4VA9P9UGQE. 
+- ne_50m_coastline	**UPDATED** removed lake near Stockholm, Sweden
+- ne_50m_glaciated_areas	**NO CHANGE**
+- ne_50m_antarctic_ice_shelves_polys	**NO CHANGE**
+- ne_50m_antarctic_ice_shelves_lines	**NO CHANGE**
+- ne_50m_geographic_lines	**UPDATED** New Int'l Date Line, thanks Alex! Also densified linework for smoother projection into conics.
+- ne_50m_graticules_all	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_graticules_1	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_graticules_5	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_graticules_10	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_graticules_15	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_graticules_20	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_graticules_30	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_50m_wgs84_bounding_box	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+	
+50M RASTER	
+- HYP_50M_SR_W	**UPDATED** New water areas.
+- HYP_50M_SR	**NO CHANGE**
+- NE1_50M_SR_W	**UPDATED** New water areas.
+- NE1_50m_SR	**NO CHANGE**
+- NE2_50m_SR_W	**UPDATED** New water areas.
+- NE2_50m_SR	**NO CHANGE**
+- ne_50m_ocean_bottom_OB_50M	**NO CHANGE**
+- ne_50m_bathymetry_BATHY_50M	**UPDATED** New water areas.
+- ne_50m_shaded_relief_SR_50M	**NO CHANGE**
+- GRAY_50m_SR	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_50m_SR_W	**NEW** special greyscale relief + hypsometric tints.
+- GRAY_50m_SR_OB	**NEW** special greyscale relief + hypsometric tints.
+	
+110M CULTURAL	
+- ne_110m_admin_0_countries	**UPDATED** Fixes topology errors, uses updated admin-0 details.
+- ne_110m_admin_0_map_units	**UPDATED** Fixes topology errors, uses updated admin-0 details.
+- ne_110m_admin_0_scale_ranks	**UPDATED** Fixes topology errors, uses updated admin-0 details.
+- ne_110m_admin_0_sovereignty	**UPDATED** Fixes topology errors, uses updated admin-0 details.
+- ne_110m_admin_0_tiny_countries	**UPDATED** Fixes topology errors, uses updated admin-0 details.
+- ne_110m_admin_0_boundary_lines_land	**UPDATED** A additional coding to allow official US gov't view of same. Added disputed codings (Kosovo, etc). More consistent with 10m file now. Added missing Chile, Peru boundary. **UPDATED** Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes: N96NSYPAPV, SEE7WH8HE1, 4VA9P9UGQE. 
+- ne_110m_admin_0_pacific_groupings	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_admin_1_states_provinces_shp	**UPDATED**Added some new ISO coding, other minor changes. Fixes topology errors. Uses same coding as 10m files. Derived from new scale rank version.
+- ne_110m_admin_1_states_provinces_shp_scale_rank	**NEW** Added a version for data linking ease in future revisions.
+- ne_110m_admin_1_states_provinces_lines_shp	**UPDATED** Filename change to remove plural from scale rank. Fixes topology errors. Adds more columns for selection based on 10m version.
+- ne_110m_populated_places	**UPDATED** Now auto generated from the ne_10m_populated_places file. See that changelog.
+- ne_110m_populated_places_simple	**UPDATED** Now auto generated from the ne_10m_populated_places file. See that changelog.
+	
+110M_PHYSICAL	
+- ne_110m_rivers_lake_centerlines	**UPDATED** Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes 4VA9P9UGQE. 
+- ne_110m_lakes	**UPDATED** Deleted Caspian Sea (already represented in the 110m ocean theme). Name1 have been changed to name, NAME to name, Name2 to name_alt. Fixes STRJ4AN2LH,  4VA9P9UGQE. 
+- ne_110m_geography_regions_polys	**UPDATED** Now auto generated from the 10m version. Now includes major lake groupings (Great Lakes, Finger Lakes, etc) moved, from lake theme.
+- ne_110m_geography_regions_points	**UPDATED** Now auto generated from the 10m version.
+- ne_110m_geography_regions_elevation_points	**UPDATED** Now auto generated from the 10m version.
+- ne_110m_geography_marine_polys	**UPDATED** Now auto generated from the 10m version.
+- ne_110m_land	**UPDATED** Fix topology.
+- ne_110m_ocean	**NO CHANGE**
+- ne_110m_coastline	**NO CHANGE**
+- ne_110m_glaciated_areas	**NO CHANGE**
+- ne_110m_geographic_lines	**UPDATED** New Int'l Date Line, thanks Alex! Also densified linework for smoother projection into conics.
+- ne_110m_graticules_all	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_graticules_1	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_graticules_5	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_graticules_10	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_graticules_15	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_graticules_20	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_graticules_30	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+- ne_110m_wgs84_bounding_box	**UPDATED** Densified vertex along lines to allow smooth projection into conics.
+
+
 2011-08-19: 1.4.0
 - Full details: http://www.naturalearthdata.com/blog/natural-earth-version-1-4-release-notes/
 
