--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2014-07-30: 2.0.1
+
+- CHANGED:  10m, 50m airports, fixed name of Seattle-Tacoma Int'l Airport
+- CHANGED:  10m marine polys, fixed name of Hecate Strait and Queen Charlotte Strait
+
+
 2012-10-12: 2.0.0
 
 - Full details: http://www.naturalearthdata.com/blog/miscellaneous/natural-earth-v2-0-0-release-notes/.
