--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+2014-10-24: 2.0.2
+- CHANGED:  Fixed accent on Bahía de Campeche
+
+2014-07-30: 2.0.1
+- CHANGED:  Fixed name of Seattle-Tacoma Int'l Airport
+- CHANGED:  Fixed spelling of Strait (Hecate and Queen Charlotte)
+
 2012-10-12: 2.0.0
 
 - Full details: http://www.naturalearthdata.com/blog/miscellaneous/natural-earth-v2-0-0-release-notes/.
