minor thanks edit

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 2017-10-05: 4.0.0
 
-- Many thanks to the over 50 people who contributed to the v4 release of Natural Earth, we couldn't do it without you! Jeremy, @raffam, @pnorman, @mojodna, @imresamu, Hannes, Axel, @pinakographo, @CaucasusandMercury, @jschleuss, Martha, Kuba, Jesús, Arkadiy, Philip, Benedikt, Ivor, @almccon, Jacob, Alice, Geoffrey, @ajmas, @instantdelay, Matt, Daniel, Felix, @karimbahgat, @migurski, Olaf, @mvexel, @yaph, Jessica, @kernc, Quentin, Peter, @xangregg, Roland, Rob, @teahan36, @dgddgd, @dkerkow, Graham, Michel, @dshorthouse, @pinakographos, Alain, Aileen, Daniel, Charles, Aaron, MattA, StephenE, NathanielD.
+- Many thanks to the over 50 people who contributed to the v4 release of Natural Earth, we couldn't do it without you! Jeremy, @raffam, @pnorman, @mojodna, @imresamu, Hannes, Axel, @pinakographo, @CaucasusandMercury, @jschleuss, Martha, Kuba, Jesús, Arkadiy, Philip, Benedikt, Ivor, @almccon, Jacob, Alice, Geoffrey, @ajmas, @instantdelay, Matt, Daniel, Felix, @karimbahgat, @migurski, Olaf, @mvexel, @yaph, Jessica, @kernc, Quentin, Peter, @xangregg, Roland, Rob, @teahan36, @dgddgd, @dkerkow, Graham, Michel, @dshorthouse, @pinakographos, Alain, Aileen, Daniel, Charles, Martin, Aaron, MattA, StephenE, NathanielD, and others.
 
 GENERAL
 
